# FiniteVolume-Refinement

./: .clang-format  CMakeLists.txt  Untitled.ipynb  cell.cpp  cell.h  cellule.cpp  cellule.h  clang-format  maillage.cpp  maillage.h  main.cpp  mesh.cpp  mesh.h  solverfv.cpp  solverfv.h
Mesh/: cell.cpp  cell.h  mesh.cpp  mesh.h
Solver/: solverfv.cpp  solverfv.h
Solver/Burgers/: solverburgers.cpp  solverburgers.h
Solver/Burgers/Godunov/: solverburgersgodunov.cpp  solverburgersgodunov.h
Solver/Burgers/LaxFriedrichs/: solverburgerslaxfriedrichs.cpp  solverburgerslaxfriedrichs.h
Solver/Linear/: solverlinear.cpp  solverlinear.h
Solver/Linear/LaxFriedrichs/: solverlinearlaxfriedrichs.cpp  solverlinearlaxfriedrichs.h
Solver/Linear/Upwind/: solverlinearupwind.cpp  solverlinearupwind.h
